Release/0.5.0 (#18)
* feat: :hammer: WIP JWT Security middleware

* chore: :pushpin: update deps

* chore: :pushpin: update deps

* feat: :hammer: add User Password Validation

* chore: :pushpin: Add golang-jwt 5.2.1

* :hammer: add JTW autentication

* :lock: secure private endpoints

* :hammer: /me endpoint

* :hammer: return empty list

* :hammer: tuits likes use cases

* :memo: update swag

* :hammer: /me

* :shield: allow only with correct api secret

* :rotating_light: fix several issues
