# cmd/tuiter/main.go
@@ -18,16 +18,17 @@ import (
 	"tuiter.com/api/internal/application/router"
 	"tuiter.com/api/internal/application/services"
 	"tuiter.com/api/internal/domain/avatar"
-	"tuiter.com/api/internal/domain/tuit"
-	"tuiter.com/api/internal/domain/user"
 	"tuiter.com/api/internal/infrastructure/mysql"
+	"tuiter.com/api/pkg/instant"
 	"tuiter.com/api/pkg/logging"
+	"tuiter.com/api/pkg/security"
 )
 
 const (
 	corsMaxAge        = 300
 	timeout           = 5 * time.Second
 	readHeaderTimeout = 3 * time.Second
+	tokenTimeoutHours = 24
 )
 
 // @title Tuiter API
@@ -37,18 +38,29 @@ const (
 // @BasePath	/v1
 // @contact.email madepietro@unlam.edu.ar.
 func main() {
+	// Time
+	locatedTime, _ := time.LoadLocation("America/Argentina/Buenos_Aires")
+	tuiterTime := instant.NewTuiterTime(locatedTime)
 	// Chi
 	port := os.Getenv("PORT")
 	addr := ":" + port
 	chiRouter := chi.NewRouter()
-	// Configure
+	// JWT
+	secret := os.Getenv("JWT_SECRET")
+	expiration := time.Hour * tokenTimeoutHours
+	// Configure Chi
 	chiRouter.Use(middleware.Recoverer)
 	chiRouter.Use(middleware.Timeout(timeout))
-	chiRouter.Use(handlers.RequestTagger) // Chi already has one -_-
+	chiRouter.Use(handlers.RequestTagger)
+	chiRouter.Use(handlers.ApiValidation)
 	chiRouter.Use(middleware.Logger)
 
 	workDir, _ := os.Getwd()
 	filesDir := http.Dir(filepath.Join(workDir, "data"))
+
+	// Security
+	tokenValidator := security.NewJWTHandler(expiration, []byte(secret), tuiterTime)
+	securityMiddleware := security.NewAuthenticatorMiddleware(tokenValidator)
 	// Add Globals
 	// Basic CORS
 	// for more ideas, see: https://developer.github.com/v3/#cross-origin-resource-sharing
@@ -71,7 +83,64 @@ func main() {
 
 	fileServerRouter := router.NewFileServer()
 	fileServerRouter.FileRoutes(chiRouter, "/files", filesDir)
-	addRoutes(chiRouter)
+
+	dbUser := os.Getenv("MYSQL_USER")
+	dbPass := os.Getenv("MYSQL_PASS")
+	dbHost := os.Getenv("MYSQL_HOST")
+	dbName := os.Getenv("MYSQL_DB")
+	dataBase := mysql.Connect(dbUser, dbPass, dbHost, dbName)
+	logger := logging.NewContextualLogger(log.Default())
+
+	// Security
+
+	err := dataBase.AutoMigrate(&mysql.UserEntity{}, &mysql.TuitEntity{})
+	if err != nil {
+		logger.Printf(context.Background(), err.Error())
+		panic("failed to migrate")
+	}
+
+	// Repositories
+	userRepo := mysql.NewUserRepository(dataBase, logger)
+	tuitRepo := mysql.NewTuitRepository(dataBase, logger)
+	userPostRepo := mysql.NewFeedRepository(dataBase, logger)
+
+	// Services
+	avatarUseCases := avatar.NewAvatarUseCases()
+	userPostUseCases := services.NewUserPostService(tuitRepo, userPostRepo)
+	authenticator := services.NewUserAuthenticator(userRepo, tokenValidator)
+	userService := services.NewUserService(userRepo, tokenValidator, avatarUseCases)
+
+	// Error Handlers
+	mysqlHandler := mysql.NewErrorHandler()
+	errHandler := handlers.NewErrorsHandler(mysqlHandler)
+
+	// Handlers
+	loginHandler := handlers.NewLogin(authenticator, errHandler)
+	userHandler := handlers.NewUserHandler(userService, tokenValidator, errHandler, logger)
+	userPostHandler := handlers.NewUserTuitHandler(userPostUseCases, tokenValidator, errHandler, logger)
+	tuitHandler := handlers.NewTuitHandler(tuitRepo, tokenValidator, errHandler, logger)
+	likeHandler := handlers.NewLikeHandler(userPostUseCases, tokenValidator, errHandler, logger)
+
+	// Routers
+	userRouter := router.NewUserRouter(userPostHandler, userHandler)
+	publicUserRouter := router.NewPublicUserRouter(userHandler)
+	tuitRouter := router.NewTuitRouter(tuitHandler)
+	loginRouter := router.NewLoginRouter(loginHandler)
+	likesRouter := router.NewLikeRouter(likeHandler)
+
+	usersRouter := chi.NewRouter()
+	usersRouter.Use(securityMiddleware.Middleware)
+	usersRouter.Route("/tuits", tuitRouter.Route)
+	usersRouter.Route("/me", func(router chi.Router) {
+		router.Route("/", userRouter.Route)
+		router.Route("/tuits/{id}/likes", likesRouter.Route)
+		router.Route("/tuits", tuitRouter.Route)
+	})
+	chiRouter.Route("/v1", func(router chi.Router) {
+		router.Route("/login", loginRouter.Route)
+		router.Route("/users", publicUserRouter.Route)
+		router.Mount("/", usersRouter)
+	})
 
 	server := &http.Server{
 		Addr:              addr,
@@ -81,56 +150,11 @@ func main() {
 
 	printWelcomeMessage(port)
 
-	err := server.ListenAndServe()
+	err = server.ListenAndServe()
 
 	if err != nil {
 		panic(err)
 	}
-}
-
-func addRoutes(chiRouter *chi.Mux) {
-	dbUser := os.Getenv("MYSQL_USER")
-	dbPass := os.Getenv("MYSQL_PASS")
-	dbHost := os.Getenv("MYSQL_HOST")
-	dbName := os.Getenv("MYSQL_DB")
-	dataBase := mysql.Connect(dbUser, dbPass, dbHost, dbName)
-	logger := logging.NewContextualLogger(log.Default())
-
-	err := dataBase.AutoMigrate(&user.User{}, &tuit.Post{})
-	if err != nil {
-		logger.Printf(context.Background(), err.Error())
-		panic("failed to migrate")
-	}
-
-	// Repositories
-	userRepo := mysql.NewUserRepository(dataBase, logger)
-	tuitRepo := mysql.NewTuitRepository(dataBase, logger)
-	userPostRepo := mysql.NewUserPostRepository(dataBase, logger)
-
-	// Services
-	avatarUseCases := avatar.NewAvatarUseCases()
-	userPostUseCases := services.NewUserPostService(tuitRepo, userPostRepo)
-
-	// Error Handlers
-	mysqlHandler := mysql.NewErrorHandler()
-	errHandler := handlers.NewErrorsHandler(mysqlHandler)
-
-	// Handlers
-	userHandler := handlers.NewUserHandler(services.NewUserUseCases(userRepo, avatarUseCases), errHandler, logger)
-	userPostHandler := handlers.NewUserTuitHandler(userPostUseCases, errHandler, logger)
-	tuitHandler := handlers.NewTuitHandler(tuitRepo, errHandler, logger)
-	likeHandler := handlers.NewLikeHandler(userPostUseCases, errHandler, logger)
-
-	// Routers
-	userRouter := router.NewUserRouter(userHandler, userPostHandler)
-	tuitRouter := router.NewTuitRouter(tuitHandler)
-	likeRouter := router.NewLikeRouter(likeHandler)
-
-	chiRouter.Route("/v1", func(router chi.Router) {
-		router.Route("/users", userRouter.Route)
-		router.Route("/tuits", tuitRouter.Route)
-		router.Route("/likes", likeRouter.Route)
-	})
 }
 
 func printWelcomeMessage(port string) {
