# internal/application/handlers/like.go
@@ -1,16 +1,27 @@
 package handlers
 
 import (
+	"errors"
 	"net/http"
+	"strconv"
 
+	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
-	"tuiter.com/api/internal/domain/userpost"
+	"github.com/golang-jwt/jwt/v5"
+	"tuiter.com/api/internal/domain/feed"
 	"tuiter.com/api/pkg/logging"
+	"tuiter.com/api/pkg/security"
 )
 
-func NewLikeHandler(liker userpost.Liker, errorRenderer ErrorRenderer, logger logging.ContextualLogger) *LikeHandler {
+func NewLikeHandler(
+	liker feed.Liker,
+	userExtractor security.UserExtractor,
+	errorRenderer ErrorRenderer,
+	logger logging.ContextualLogger,
+) *LikeHandler {
 	return &LikeHandler{
 		errorRenderer: errorRenderer,
+		userExtractor: userExtractor,
 		logger:        logger,
 		liker:         liker,
 	}
@@ -18,8 +29,9 @@ func NewLikeHandler(liker userpost.Liker, errorRenderer ErrorRenderer, logger lo
 
 type LikeHandler struct {
 	errorRenderer ErrorRenderer
+	userExtractor security.UserExtractor
 	logger        logging.ContextualLogger
-	liker         userpost.Liker
+	liker         feed.Liker
 }
 
 // AddLike godoc
@@ -30,21 +42,33 @@ type LikeHandler struct {
 // @Produce json
 // @Param like body like true "Like"
 // @Success 200 {object} userPostPayload
-// @Router /likes [post].
+// @Router /me/tuits/{id}/likes [post].
 func (l *LikeHandler) AddLike(writer http.ResponseWriter, request *http.Request) {
-	payload := &like{}
-	if err := render.Bind(request, payload); err != nil {
-		l.logger.Printf(request.Context(), "syserror rendering invalid request: %v", err)
-		err := render.Render(writer, request, ErrInvalidRequest(err))
+	tuitID, err := strconv.Atoi(chi.URLParam(request, "id"))
 
-		if err != nil {
-			return
-		}
+	if err != nil {
+		_ = render.Render(writer, request, ErrInvalidRequest(errors.New("invalid tuit id")))
 
 		return
 	}
 
-	userTuit, err := l.liker.AddLike(request.Context(), payload.UserID, payload.TuitID)
+	token, ok := request.Context().Value(security.TokenMan).(*jwt.Token)
+
+	if !ok {
+		_ = render.Render(writer, request, ErrInvalidRequest(errors.New("unauthorized")))
+
+		return
+	}
+
+	userId, err := l.userExtractor.ExtractUserId(token)
+
+	if err != nil {
+		_ = render.Render(writer, request, ErrInvalidRequest(err))
+
+		return
+	}
+
+	userTuit, err := l.liker.AddLike(request.Context(), userId, tuitID)
 
 	if err != nil {
 		_ = render.Render(writer, request, l.errorRenderer.RenderError(err))
@@ -67,21 +91,33 @@ func (l *LikeHandler) AddLike(writer http.ResponseWriter, request *http.Request)
 // @Produce json
 // @Param like body like true "Like"
 // @Success 200 {object} userPostPayload
-// @Router /likes [delete].
+// @Router /me/tuits/{id}/likes [delete].
 func (l *LikeHandler) RemoveLike(writer http.ResponseWriter, request *http.Request) {
-	payload := &like{}
-	if err := render.Bind(request, payload); err != nil {
-		l.logger.Printf(request.Context(), "syserror rendering invalid request: %v", err)
-		err := render.Render(writer, request, ErrInvalidRequest(err))
+	tuitID, err := strconv.Atoi(chi.URLParam(request, "id"))
 
-		if err != nil {
-			return
-		}
+	if err != nil {
+		_ = render.Render(writer, request, ErrInvalidRequest(errors.New("invalid tuit id")))
 
 		return
 	}
 
-	userTuit, err := l.liker.RemoveLike(request.Context(), payload.UserID, payload.TuitID)
+	token, ok := request.Context().Value(security.TokenMan).(*jwt.Token)
+
+	if !ok {
+		_ = render.Render(writer, request, ErrInvalidRequest(errors.New("unauthorized")))
+
+		return
+	}
+
+	userId, err := l.userExtractor.ExtractUserId(token)
+
+	if err != nil {
+		_ = render.Render(writer, request, ErrInvalidRequest(err))
+
+		return
+	}
+
+	userTuit, err := l.liker.RemoveLike(request.Context(), userId, tuitID)
 
 	if err != nil {
 		err := render.Render(writer, request, l.errorRenderer.RenderError(err))
