# internal/application/handlers/userpost.go
@@ -4,28 +4,32 @@ import (
 	"net/http"
 	"strconv"
 
-	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
-	"tuiter.com/api/internal/domain/userpost"
+	"github.com/golang-jwt/jwt/v5"
+	"tuiter.com/api/internal/domain/feed"
 	"tuiter.com/api/pkg/logging"
+	"tuiter.com/api/pkg/security"
 )
 
 func NewUserTuitHandler(
-	useCases userpost.UseCases,
+	useCases feed.UseCases,
+	claimsExtractor security.TokenClaimsExtractor,
 	errRenderer ErrorRenderer,
 	logger logging.ContextualLogger,
 ) *UserTuitHandler {
 	return &UserTuitHandler{
-		useCases:      useCases,
-		errorRenderer: errRenderer,
-		logger:        logger,
+		useCases:        useCases,
+		claimsExtractor: claimsExtractor,
+		errorRenderer:   errRenderer,
+		logger:          logger,
 	}
 }
 
 type UserTuitHandler struct {
-	useCases      userpost.UseCases
-	errorRenderer ErrorRenderer
-	logger        logging.ContextualLogger
+	useCases        feed.UseCases
+	claimsExtractor security.TokenClaimsExtractor
+	errorRenderer   ErrorRenderer
+	logger          logging.ContextualLogger
 }
 
 // Search Tuits From User godoc
@@ -36,9 +40,12 @@ type UserTuitHandler struct {
 // @Param page query int false "Page"
 // @Param id path int true "User ID"
 // @Produce json
-// @Success 200 {array} userpost.UserPost
-// @Router /users/{id}/tuits [get].
+// @Success 200 {array} feed.Feed
+// @Router /me/feed [get].
 func (l *UserTuitHandler) Search(writer http.ResponseWriter, request *http.Request) {
+	test := request.URL.Query().Get("page")
+
+	l.logger.Printf(request.Context(), "page: %s", test)
 	page, err := strconv.Atoi(request.URL.Query().Get("page"))
 
 	if err != nil {
@@ -47,13 +54,23 @@ func (l *UserTuitHandler) Search(writer http.ResponseWriter, request *http.Reque
 		page = 0
 	}
 
-	userID, err := strconv.Atoi(chi.URLParam(request, "id"))
+	token, ok := request.Context().Value(security.TokenMan).(*jwt.Token)
+
+	if !ok {
+		_ = render.Render(writer, request, ErrInvalidRequest(err))
+
+		return
+	}
+
+	claims, err := l.claimsExtractor.ExtractClaims(token)
 
 	if err != nil {
 		_ = render.Render(writer, request, ErrInvalidRequest(err))
 
 		return
 	}
+
+	userID := int(claims["sub"].(float64))
 
 	userPosts, err := l.useCases.Paginate(request.Context(), page, userID)
 
@@ -64,17 +81,12 @@ func (l *UserTuitHandler) Search(writer http.ResponseWriter, request *http.Reque
 	_ = render.RenderList(writer, request, newUserPostList(userPosts))
 }
 
-type like struct {
-	UserID int `json:"user_id"`
-	TuitID int `json:"tuit_id"`
-}
-
 type userPostPayload struct {
-	*userpost.UserPost
+	*feed.Feed
 }
 
 func (u *userPostPayload) Bind(_ *http.Request) error {
-	if u.UserPost == nil {
+	if u.Feed == nil {
 		return errInvalidRequest
 	}
 
@@ -82,13 +94,13 @@ func (u *userPostPayload) Bind(_ *http.Request) error {
 }
 
 func (u *userPostPayload) Render(_ http.ResponseWriter, _ *http.Request) error {
-	u.Liked = u.UserPost.Liked
+	u.Liked = u.Feed.Liked
 
 	return nil
 }
 
-func newUserPostList(posts []*userpost.UserPost) []render.Renderer {
-	var list []render.Renderer
+func newUserPostList(posts []*feed.Feed) []render.Renderer {
+	list := []render.Renderer{}
 
 	for _, userPost := range posts {
 		list = append(list, &userPostPayload{userPost})
