# internal/application/router/users.go
@@ -7,6 +7,10 @@ import (
 	"tuiter.com/api/internal/application/handlers"
 )
 
+type profileHandler interface {
+	MeUser(writer http.ResponseWriter, request *http.Request)
+}
+
 type userHandler interface {
 	Search(writer http.ResponseWriter, request *http.Request)
 	FindUserByID(writer http.ResponseWriter, request *http.Request)
@@ -17,21 +21,35 @@ type userPostHandler interface {
 	Search(writer http.ResponseWriter, request *http.Request)
 }
 
-func NewUserRouter(userHandler userHandler, userPostHandler userPostHandler) *UserRouter {
+func NewUserRouter(userPostHandler userPostHandler, profileHandler profileHandler) *UserRouter {
 	return &UserRouter{
-		user:     userHandler,
-		userPost: userPostHandler,
+		userPost:       userPostHandler,
+		profileHandler: profileHandler,
 	}
 }
 
 func (ur *UserRouter) Route(router chi.Router) {
-	router.Get("/", ur.user.Search)
-	router.Get("/{id}", ur.user.FindUserByID)
-	router.Post("/", ur.user.CreateUser)
-	router.With(handlers.Pagination).Get("/{id}/tuits", ur.userPost.Search)
+	router.With(handlers.Pagination).Get("/feed", ur.userPost.Search)
+	router.Get("/profile", ur.profileHandler.MeUser)
 }
 
 type UserRouter struct {
-	user     userHandler
-	userPost userPostHandler
+	userPost       userPostHandler
+	profileHandler profileHandler
+}
+
+func NewPublicUserRouter(userHandler userHandler) *PublicUserRouter {
+	return &PublicUserRouter{
+		user: userHandler,
+	}
+}
+
+func (pur *PublicUserRouter) Route(router chi.Router) {
+	router.Get("/", pur.user.Search)
+	router.Get("/{id}", pur.user.FindUserByID)
+	router.Post("/", pur.user.CreateUser)
+}
+
+type PublicUserRouter struct {
+	user userHandler
 }
