# internal/domain/tuit/model.go
@@ -1,16 +1,16 @@
 package tuit
 
 import (
-	"gorm.io/gorm"
+	"time"
+
 	"tuiter.com/api/internal/domain/user"
 )
 
-type Post struct {
-	gorm.Model
-	ParentID *int
-	Message  string
-	AuthorID int
-	Author   user.User
-	Users    []user.User `gorm:"many2many:post_likes;"`
-	Likes    int
+type Tuit struct {
+	ID        uint
+	ParentID  *uint
+	Message   string
+	Author    user.User
+	Likes     uint
+	CreatedAt time.Time
 }
